feat: create mission
